# mikagami

./: .gitignore  Pipfile  README.md  build.sh  gf.sh  pyproject.toml
_pre/src/: gfbuild.sh
_pre/src/original/: 1.icns  2.icns  3.icns  4.icns  5.icns
icons/: gf.icns  gf1.icns  gf2.icns  gf3.icns  gf4.icns  gf5.icns
sh/: gf.sh  gf1.sh  gf2.sh  gf3.sh  gf4.sh  gf5.sh
