[tool.poetry]
name = "mikagami"
version = "0.1.0"
description = "Matsuri Kagami."
authors = ["nothink <gakongakon@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
mac-appify = "^2020.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
